# Jorb

./: .gitignore  Cargo.toml  test.py
job_worker/: Cargo.toml
jorb.db/: db  snap.000000000000015B
src/: main.rs
src/handlers/: mod.rs
src/jorb_lib/: handlers.rs  mod.rs  types.rs  worker_handling.rs
src/types/: mod.rs
src/worker_handling/: mod.rs
