[package]
name = "job_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.5"
bytes = "0.5.6"
uuid = { version = "0.8.2" , features = ["v4"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.9", features = ["blocking"]}