[package]
name = "job_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2" , features = ["v4", "serde"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.9", features = ["blocking"]}
bincode = "1.3.3"
chrono = "0.4.19"
sled = "0.34"